# openapi.yaml
@@ -31,6 +31,30 @@ paths:
                 - ResourceService
             description: 1. 列出全部资源
             operationId: ResourceService_ListResources
+            parameters:
+                - name: userId
+                  in: query
+                  schema:
+                    type: string
+                - name: start
+                  in: query
+                  schema:
+                    type: string
+                    format: date-time
+                - name: end
+                  in: query
+                  schema:
+                    type: string
+                    format: date-time
+                - name: type
+                  in: query
+                  schema:
+                    type: string
+                - name: fieldMask
+                  in: query
+                  schema:
+                    type: string
+                    format: field-mask
             responses:
                 "200":
                     description: OK
@@ -53,10 +77,46 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/resource.v1.Resource'
+                specs:
+                    type: object
+                    additionalProperties:
+                        $ref: '#/components/schemas/resource.v1.ResourceSpec'
         resource.v1.Resource:
             type: object
-            properties: {}
+            properties:
+                instanceId:
+                    type: string
+                name:
+                    type: string
+                userId:
+                    type: string
+                type:
+                    type: string
+                createdAt:
+                    type: string
+                    format: date-time
+                updatedAt:
+                    type: string
+                    format: date-time
             description: =====================实体/值对象=======================
+        resource.v1.ResourceSpec:
+            type: object
+            properties:
+                instanceId:
+                    type: string
+                cpuCores:
+                    type: integer
+                    format: uint32
+                memorySize:
+                    type: integer
+                    format: uint32
+                gpu:
+                    type: integer
+                    format: uint32
+                image:
+                    type: string
+                customConfig:
+                    type: object
 tags:
     - name: Greeter
       description: The greeting service definition.
